--- a/index.html
+++ b/index.html
@@ -59,11 +59,12 @@
                 </div>
             </div>
 
-            <div>
-                <h1 class="list-title">Quick list of Our Features</h1>
+            <div class="list-info">
+                <h1 class="list-title"><span class="quick-color"> Quick list</span> of Our <span class="featured-color">Features</span></h1>
                 <p class="list-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-                <button class="btn">Explore Mor</button>
+                <button class="btn">Explore More</button>
             </div>
+            <!-- ------------featured list section end here------------- -->
         </section>
     </main>
 </body>
