--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <p class="banner-discription">There are many variations of passages of Lorem Ipsum available, but the
                     majority have suffered alteration in some form, by injected humour, or randomised words which don't
                     look even</p>
-                <button class="btn">Explore More</button>
+                <button class="banner-btn">Explore More</button>
             </div>
             <div class="banner-image">
                 <img src="images/banner.png" alt="">
@@ -62,7 +62,7 @@
             <div class="list-info">
                 <h1 class="list-title"><span class="quick-color"> Quick list</span> of Our <span class="featured-color">Features</span></h1>
                 <p class="list-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-                <button class="btn">Explore More</button>
+                <button class="list-btn">Explore More</button>
             </div>
             <!-- ------------featured list section end here------------- -->
         </section>
