done all section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>G3-Architects</title>
     <!-- Stylsheet linked -->
     <link rel="stylesheet" href="styles/styles.css">
+    <!-- font awsome link -->
+    <script src="https://kit.fontawesome.com/d227efd716.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -42,8 +44,8 @@
     </header>
     <!-- ---------header end--------- -->
     <main>
-        <!-- ------------featured list section start here------------- -->
-        <section class="featured-list-container">
+        <!-- ------------features list section start here------------- -->
+        <section class="features-list-container">
             <div class="list-image-container">
                 <div class="list-image">
                     <img src="images/team1.png" alt="">
@@ -60,13 +62,127 @@
             </div>
 
             <div class="list-info">
-                <h1 class="list-title"><span class="quick-color"> Quick list</span> of Our <span class="featured-color">Features</span></h1>
-                <p class="list-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <h1 class="list-title"><span class="quick-color"> Quick list</span> of Our <span
+                        class="features-color">Features</span></h1>
+                <p class="list-discription">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
                 <button class="list-btn">Explore More</button>
             </div>
-            <!-- ------------featured list section end here------------- -->
+        </section>
+        <!-- ------------features list section end here------------- -->
+
+        <!-- ----------feature experience section------------------  -->
+        <section class="experiences-container">
+            <div class="experience-info">
+                <h1 class="experience-title">Features you will love & enjoy</h1>
+                <p class="exp-discription">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="experience-details">
+                    <div class="experience-sub-info">
+                        <h2 class="sub-title">Dexktop & Mobile Version</h2>
+                        <p class="sub-discription">There are many variations of passages of Lorem Ipsum available, but
+                            the majority have
+                            suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="experience-sub-info">
+                        <h2 class="sub-title">Drag & Drop Builder</h2>
+                        <p class="sub-discription">There are many variations of passages of Lorem Ipsum available, but
+                            the majority have suffered alteration in some form, by injected humour, or
+                            randomised...........</p>
+                    </div>
+                    <div class="experience-sub-info">
+                        <h2 class="sub-title">Awesome Modern Design</h2>
+                        <p class="sub-discription">There are many variations of passages of Lorem Ipsum available, but
+                            the majority have
+                            suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="experience-sub-info">
+                        <h2 class="sub-title">Super Easy to Edit</h2>
+                        <p class="sub-discription">There are many variations of passages of Lorem Ipsum available, but
+                            the majority have
+                            suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                </div>
+            </div>
+            <div class="experience-image">
+                <img src="images/architect.png" alt="">
+                <div class="experience-years">
+                    <h1>10+Year</h1>
+                    <p>Experience</p>
+                </div>
+            </div>
+        </section>
+        <!-- experience section end here------------ -->
+
+        <!-- ----------fact section start here------- -->
+        <section class="fact-container">
+            <h1 class="fact-title">Some Facts</h1>
+            <p class="fact-text">There are many variations of passages of Lorem Ipsum available, but the majority have
+                suffered alteration.</p>
+        </section>
+        <!-- fact section end -->
+        <!-- ----- counter box start here----- -->
+        <section class="counter-box-container">
+            <div class="counter-box">
+                <i class="fa-solid fa-mars-and-venus-burst pt"></i>
+                <h1 class="counter">54</h1>
+                <p>Awards Winnings</p>
+            </div>
+            <div class="counter-box">
+                <i class="fa-solid fa-magnifying-glass-chart pt"></i>
+                <h1 class="counter">1458</h1>
+                <p>Project Finished</p>
+            </div>
+            <div class="counter-box"><i class="fa-solid fa-mobile-retro pt"></i>
+                <h1 class="counter">590</h1>
+                <p>Clients Worked</p>
+            </div>
+            <div class="counter-box"><i class="fa-solid fa-envelope-circle-check pt"></i>
+                <h1 class="counter">22578</h1>
+                <p>Email Send</p>
+            </div>
+        </section>
+        <!-- counter box section end -->
+
+        <!-- sponspors section start -->
+        <section class="sponspors-container">
+            <div class="sponspors-info">
+                <h1 class="sponspors-title">Our Sponspors</h1>
+                <p class="sponspors-discription">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration.</p>
+            </div>
+            <div class="sponspors-logo">
+                <div class="logo"><img src="images/sponsors/amazon.png" alt=""></div>
+                <div class="logo"><img src="images/sponsors/figma.png" alt=""></div>
+                <div class="logo"><img src="images/sponsors/google.png" alt=""></div>
+                <div class="logo"><img src="images/sponsors/spotify.png" alt=""></div>
+                <div class="logo"><img src="images/sponsors/telerama.png" alt=""></div>
+            </div>
+        </section>
+        <!---------- sponspors section end------ -->
+        <section class="footer">
+            <p>All rights reserved copyright@2023 startup landing page design</p>
         </section>
     </main>
+    <footer>
+        <div class="footer-container">
+            <div>
+                <h1 class="footer-title">Our social sites</h1>
+                <p class="footer-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, consequatur maxime perspiciatis magni placeat quibusdam dolorum distinctio laudantium commodi assumenda explicabo ea vitae hic voluptate id adipisci, repellat soluta expedita?</p>
+                <i class="fa-brands fa-facebook-messenger"></i>
+                <i class="fa-brands fa-youtube"></i>
+                <i class="fa-brands fa-twitter"></i>
+
+            </div>
+            <form action="">
+                <h1 class="contact-us">Contact us</h1>
+                <input type="email" name="" id="" placeholder="enter-your-email" class="mt">
+                <input type="submit" value="Subscribe now" class="btn-primary">
+            </form>
+        </div>
+    </footer>
 </body>
 
 </html>
