--- a/index.html
+++ b/index.html
@@ -170,7 +170,9 @@
         <div class="footer-container">
             <div>
                 <h1 class="footer-title">Our social sites</h1>
-                <p class="footer-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, consequatur maxime perspiciatis magni placeat quibusdam dolorum distinctio laudantium commodi assumenda explicabo ea vitae hic voluptate id adipisci, repellat soluta expedita?</p>
+                <p class="footer-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, consequatur maxime
+                    perspiciatis magni placeat quibusdam dolorum distinctio laudantium commodi assumenda explicabo ea
+                    vitae hic voluptate id adipisci, repellat soluta expedita?</p>
                 <i class="fa-brands fa-facebook-messenger"></i>
                 <i class="fa-brands fa-youtube"></i>
                 <i class="fa-brands fa-twitter"></i>
